# kokoro-vpn

./: .env.example  .gitignore  Caddyfile  Caddyfile.demo  LICENSE  README.md  docker-compose.demo.yml  docker-compose.yml
.github/workflows/: deploy-website.yml  deploy.yml  release-desktop.yml
desktop/: index.html  package.json
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: ConnectionStatus.tsx  DeviceList.tsx  LoginForm.tsx  TrafficStats.tsx
desktop/src/hooks/: useAuth.ts  useVpn.ts
desktop/src/lib/: api.ts
desktop/src/styles/: globals.css
scripts/: setup.sh  uninstall.sh
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 001_init.sql
server/src/: config.rs  db.rs  errors.rs  main.rs
server/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
server/src/sandbox/: cleanup.rs  handlers.rs  mod.rs
server/src/users/: handlers.rs  models.rs
server/src/wireguard/: handlers.rs  manager.rs  mod.rs  stats.rs
terraform/: main.tf  terraform.tfvars.example
website/: index.html  package.json  vite.config.ts
website/src/: App.tsx
website/src/pages/: DemoApp.tsx  Landing.tsx  Sandbox.tsx
website/src/styles/: globals.css
